--- a/index.html
+++ b/index.html
@@ -12,24 +12,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Montserrat|Roboto+Slab|Yellowtail' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<div class="container">
-
-	<div class="jumbotron bg-primary text-center">
-		<h1>Boo The Dog Fan Page!</h1>
-	</div>
-
-	<div class="row">
-	<div class="col-sm-12">
-		<div class="panel panel-primary">
-		<div class="panel-heading">Instructions</div>
-			<div class="panel-body text-center">
-					<h4>Oh no! Someone has vandalized our Boo 'The Cutest Dog In The World' fanpage!</h4>
-				<h4>There are a bunch of errors on this page!</h4>
-				<h4>Try your best to find them all!</h4>
-				</div>
-				</div>
-		</div>
-	</div>
-  
+ 
+	<p> blah blah blah </p>
+	
+</body>
 </html>
